# cosmic-speech-to-text

./: CLAUDE.md  Cargo.toml  README.md  justfile
i18n/de/: cosmic_speech_to_text.ftl
i18n/en/: cosmic_speech_to_text.ftl
i18n/es/: cosmic_speech_to_text.ftl
i18n/fr/: cosmic_speech_to_text.ftl
resources/: app.desktop
src/: app.rs  audio.rs  config.rs  deps.rs  i18n.rs  main.rs  paste.rs  settings.rs  shortcut.rs  toggle.rs  transcribe.rs  whisper_models.rs
