[package]
name = "cosmic-speech-to-text"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Speech-to-text applet for the COSMIC desktop"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[dependencies]
i18n-embed-fl = "0.9.2"
rust-embed = "8.5.0"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["rustls-tls", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "time"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "applet",
    "tokio",
    "wayland",
    "winit",
]

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
